Fixed the error that characters are not visible when editing title / description in dark theme

--- a/discovery-frontend/src/assets/css/theme_dark/metatron/page.css
+++ b/discovery-frontend/src/assets/css/theme_dark/metatron/page.css
@@ -26952,7 +26952,7 @@
 }
 
 .theme-dark .ddp-box-flowdetail .ddp-data-filename span.ddp-txt-filename:hover .ddp-link-edit .ddp-icon-edit2 {
-    background-position: -11px top;
+  background-position: -33px top;
 }
 
 .theme-dark .ddp-box-flowdetail .ddp-data-filename .ddp-icon-db {
@@ -27079,7 +27079,7 @@
 }
 
 .theme-dark .ddp-box-flowdetail .ddp-txt-explain:hover .ddp-link-edit .ddp-icon-edit2 {
-    background-position: -11px top;
+  background-position: -33px top;
 }
 
 .theme-dark .ddp-box-flowdetail .ddp-ui-databuttons {
